# hi-kaif

./: .pylintrc  README.md
backend/: .env.example  .gitignore  Dockerfile  database.py  docker-compose.yml  fastapi_client.py  fastapi_server.py  final_result_tool.py  fly.toml  pyproject.toml  research.db  researcher.py  system_prompts.py  wikipedia_tool.py
backend/models/: __init__.py  final_result_tool.py  groq.py  wikipedia_tool.py
frontend/: .env.example  .gitignore  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: chatwindow.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/gallery/: page.tsx
frontend/src/app/gallery/[id]/: page.tsx
frontend/src/components/: theme-provider.tsx  theme-toggle.tsx
frontend/src/components/chat/: audio-visualizer.tsx  chat-context.tsx  chat-message.tsx  markdown-renderer.tsx  message-input.tsx  message-list.tsx  prompt-suggestions.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: use-auto-scroll.ts  use-chat.ts  use-transcription.ts
frontend/src/lib/: api.ts  message-utils.ts
