[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.51.0",
    "cryptography>=44.0.2",
    "fastapi>=0.115.12",
    "google-genai>=1.11.0",
    "groq>=0.22.0",
    "httpx>=0.28.1",
    "litellm>=1.69.3",
    "nanoid>=2.0.0",
    "openai>=1.75.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
